[tool.poetry]
name = "spotto_league"
version = "0.1.0"
description = ""
authors = ["onopon <kiyopon.onopon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
flask = "0.12.1"
flask-httpauth = "^4.2.0"
SQLAlchemy = "^1.3.23"
flask-sqlalchemy = "^2.4.4"
Flask-Migrate = "^2.7.0"
PyMySQL = "0.10.1"
typing = "^3.7.4"
Flask-Login = "^0.5.0"
Flask-Script = "^2.0.6"
gunicorn = "^19.6.0"
line-bot-sdk = "^1.19.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.902"
types-Flask = "^1.1.1"
types-requests = "^2.25.0"
types-PyYAML = "^5.4.3"
types-Werkzeug = "^1.0.2"
types-freezegun = "^0.1.4"
pytest-cov = "^2.12.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
